# MultiThreadPlot

./: CMakeLists.txt  coordinates.cpp  coordinates.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mythread.cpp  mythread.h
